--- a/metadata/manifest.yml
+++ b/metadata/manifest.yml
@@ -6,6 +6,17 @@ Version: '1.0.0'
 License: "ASL 2.0"
 License-Url: http://www.apache.org/licenses/LICENSE-2.0.txt
 Cartridge-Version: 0.0.1
+Compatible-Versions:
+- 0.0.1
+- 0.0.2
+- 0.0.3
+- 0.0.4
+- 0.0.5
+- 0.0.6
+- 0.0.7
+- 0.0.8
+- 0.0.9
+- 0.0.10
 Cartridge-Vendor: redhat
 Vendor: redhat
 Categories:
