https://bugzilla.redhat.com/show_bug.cgi?id=1129544 adding website reference

--- a/metadata/manifest.yml
+++ b/metadata/manifest.yml
@@ -15,7 +15,7 @@ Categories:
   - jboss
   - xpaas
   - service
-Website:
+Website: http://www.redhat.com/products/jbossenterprisemiddleware/fuse/
 Help-Topics:
   "Getting Started": https://www.openshift.com/videos/getting-started-with-jboss-fuse-on-openshift
 Cart-Data:
