Adding back all the MQ, ES, and Gateway ports

--- a/metadata/manifest.yml
+++ b/metadata/manifest.yml
@@ -83,9 +83,9 @@ Endpoints:
         Backend:       ""
         #Options:       { "tohttps": true }
 
-  #
-  # Gears inside of OpenShift can connect to these ports.
-  #
+#
+# Non-SSL Exposed Ports.
+#
   - Private-IP-Name:   IP
     Private-Port-Name: ZOOKEEPER_PORT
     Private-Port:      3128
@@ -96,6 +96,48 @@ Endpoints:
     Private-Port:      23101
     Public-Port-Name:  SSH_PROXY_PORT
     Options:           { "ssl_to_gear": true }
+
+  # AMQ Ports.
+  - Private-IP-Name:   IP
+    Private-Port-Name: OPENWIRE_PORT
+    Private-Port:      31313
+    Public-Port-Name:  OPENWIRE_PROXY_PORT
+    Options:           { "ssl_to_gear": true }
+  - Private-IP-Name:   IP
+    Private-Port-Name: STOMP_PORT
+    Private-Port:      31323
+    Public-Port-Name:  STOMP_PROXY_PORT
+    Options:           { "ssl_to_gear": true }
+  - Private-IP-Name:   IP
+    Private-Port-Name: AMQP_PORT
+    Private-Port:      31333
+    Public-Port-Name:  AMQP_PROXY_PORT
+    Options:           { "ssl_to_gear": true }
+  - Private-IP-Name:   IP
+    Private-Port-Name: MQTT_PORT
+    Private-Port:      31343
+    Public-Port-Name:  MQTT_PROXY_PORT
+    Options:           { "ssl_to_gear": true }
+
+  # Elastic Search Ports
+  - Private-IP-Name:   IP
+    Private-Port-Name: ES_HTTP_PORT
+    Private-Port:      18080
+    Public-Port-Name:  ES_HTTP_PROXY_PORT
+    Options:           { "ssl_to_gear": true }
+  - Private-IP-Name:   IP
+    Private-Port-Name: ES_TCP_PORT
+    Private-Port:      19301
+    Public-Port-Name:  ES_TCP_PROXY_PORT
+    Options:           { "ssl_to_gear": true }
+
+  # Gateway Ports
+  - Private-IP-Name:   IP
+    Private-Port-Name: GATEWAY_PORT
+    Private-Port:      30303
+    Public-Port-Name:  GATEWAY_PROXY_PORT
+    Options:           { "ssl_to_gear": true }
+
   - Private-IP-Name:   IP
     Private-Port-Name: APP_PORT_1
     Private-Port:      3001
@@ -112,16 +154,59 @@ Endpoints:
     Public-Port-Name:  APP_PORT_3_PROXY_PORT
     Options:           { "ssl_to_gear": true }
 
-  #
-  # Applications external to OpenShift can connect to these SNI/SSL ports.
-  #
+#
+# SNI routed SSL ports..
+#
+  - Private-IP-Name:   IP
+    Private-Port-Name: OPENWIRE_SSL_PORT
+    Private-Port:      31314
+    Public-Port-Name:  OPENWIRE_SSL_PROXY_PORT
+    Protocols: [tls]
+    Mappings:
+    - Frontend: 'TLS_PORT_1'
+      Backend: ''
+  - Private-IP-Name:   IP
+    Private-Port-Name: STOMP_SSL_PORT
+    Private-Port:      31324
+    Public-Port-Name:  STOMP_SSL_PROXY_PORT
+    Protocols: [tls]
+    Mappings:
+    - Frontend: 'TLS_PORT_2'
+      Backend: ''
+  - Private-IP-Name:   IP
+    Private-Port-Name: AMQP_SSL_PORT
+    Private-Port:      31334
+    Public-Port-Name:  AMQP_SSL_PROXY_PORT
+    Protocols: [tls]
+    Mappings:
+    - Frontend: 'TLS_PORT_3'
+      Backend: ''
+  - Private-IP-Name:   IP
+    Private-Port-Name: MQTT_SSL_PORT
+    Private-Port:      31344
+    Public-Port-Name:  MQTT_SSL_PROXY_PORT
+    Protocols: [tls]
+    Mappings:
+    - Frontend: 'TLS_PORT_4'
+      Backend: ''
+
+  # Gateway Ports
+  - Private-IP-Name:   IP
+    Private-Port-Name: GATEWAY_SSL_PORT
+    Private-Port:      30304
+    Public-Port-Name:  GATEWAY_SSL_PROXY_PORT
+    Protocols: [tls]
+    Mappings:
+    - Frontend: 'TLS_PORT_5'
+      Backend: ''
+      
   - Private-IP-Name:   IP
     Private-Port-Name: APP_TLS_PORT_1
     Private-Port:      4001
     Public-Port-Name:  APP_TLS_PORT_1_PROXY_PORT
     Protocols: [tls]
     Mappings:
-    - Frontend: 'TLS_PORT_1'
+    - Frontend: 'TLS_PORT_6'
       Backend: ''
   - Private-IP-Name:   IP
     Private-Port-Name: APP_TLS_PORT_2
@@ -129,31 +214,15 @@ Endpoints:
     Public-Port-Name:  APP_TLS_PORT_2_PROXY_PORT
     Protocols: [tls]
     Mappings:
-    - Frontend: 'TLS_PORT_2'
+    - Frontend: 'TLS_PORT_7'
       Backend: ''
   - Private-IP-Name:   IP
     Private-Port-Name: APP_TLS_PORT_3
-    Private-Port:      4002
+    Private-Port:      4003
     Public-Port-Name:  APP_TLS_PORT_3_PROXY_PORT
     Protocols: [tls]
     Mappings:
-    - Frontend: 'TLS_PORT_3'
-      Backend: ''
-  - Private-IP-Name:   IP
-    Private-Port-Name: APP_TLS_PORT_4
-    Private-Port:      4002
-    Public-Port-Name:  APP_TLS_PORT_4_PROXY_PORT
-    Protocols: [tls]
-    Mappings:
-    - Frontend: 'TLS_PORT_4'
-      Backend: ''
-  - Private-IP-Name:   IP
-    Private-Port-Name: APP_TLS_PORT_5
-    Private-Port:      4005
-    Public-Port-Name:  APP_TLS_PORT_5_PROXY_PORT
-    Protocols: [tls]
-    Mappings:
-    - Frontend: 'TLS_PORT_5'
+    - Frontend: 'TLS_PORT_8'
       Backend: ''
       
   #
