--- a/versions/1.0.0/fabric/import/fabric/configs/versions/1.0/profiles/mq-base/org.fusesource.mq.fabric.template.properties
+++ b/versions/1.0.0/fabric/import/fabric/configs/versions/1.0/profiles/mq-base/org.fusesource.mq.fabric.template.properties
@@ -19,4 +19,4 @@ connectors=openwire
 config=profile\:broker.xml
 group=default
 standby.pool=default
-keystore.url=${profile:default/keystore.jks}
+keystore.url=profile:keystore.jks
