--- a/metadata/manifest.yml
+++ b/metadata/manifest.yml
@@ -3,7 +3,7 @@ Cartridge-Short-Name: FUSE
 Display-Name: JBoss Fuse 6.1.0 EA
 Description: "Runs a JBoss Fuse container on OpenShift."
 Version: '1.0.0'
-Source-Url: https://github.com/jboss-fuse/fuse-openshift-cartridge/archive/master.zip
+Source-Url: https://github.com/jboss-fuse/fuse-openshift-cartridge/archive/jboss-fuse-6.1.x-391.zip
 License: "ASL 2.0"
 License-Url: http://www.apache.org/licenses/LICENSE-2.0.txt
 Cartridge-Version: 0.0.1
