--- a/versions/1.0.0/etc/branding.properties
+++ b/versions/1.0.0/etc/branding.properties
@@ -16,25 +16,23 @@
 #
 
 welcome = \
-\u001B[36m      _ ____                  ______\u001B[0m\n\
-\u001B[36m     | |  _ \\                |  ____|             \u001B[0m\n\
-\u001B[36m     | | |_) | ___  ___ ___  | |__ _   _ ___  ___\u001B[0m\n\
-\u001B[36m _   | |  _ < / _ \\/ __/ __| |  __| | | / __|/ _ \\\u001B[0m\n\
-\u001B[36m| |__| | |_) | (_) \\__ \\__ \\ | |  | |_| \\__ \\  __/\u001B[0m\n\
-\u001B[36m \\____/|____/ \\___/|___/___/ |_|   \\__,_|___/\\___|\u001B[0m\n\
+\u001B[36m      _ ____                                __  __  ____\u001B[0m\n\
+\u001B[36m     | |  _ \\                    /\\        |  \\/  |/ __ \\\u001B[0m\n\
+\u001B[36m     | | |_) | ___  ___ ___     /  \\ ______| \\  / | |  | |\u001B[0m\n\
+\u001B[36m _   | |  _ < / _ \\/ __/ __|   / /\\ \\______| |\\/| | |  | |\u001B[0m\n\
+\u001B[36m| |__| | |_) | (_) \\__ \\__ \\  / ____ \\     | |  | | |__| |\u001B[0m\n\
+\u001B[36m \\____/|____/ \\___/|___/___/ /_/    \\_\\    |_|  |_|\\___\\_\\\u001B[0m\n\
 \n\
-\u001B[1m  JBoss Fuse\u001B[0m (OPENSHIFT_FUSE_DISTRO_VERSION)\n\
-\u001B[36m  http://www.redhat.com/products/jbossenterprisemiddleware/fuse/\u001B[0m\n\
+\u001B[1m  JBoss A-MQ\u001B[0m (OPENSHIFT_FUSE_DISTRO_VERSION)\n\
+\u001B[36m  http://www.redhat.com/products/jbossenterprisemiddleware/amq/\u001B[0m\n\
 \n\
 Hit '\u001B[1m<tab>\u001B[0m' for a list of available commands\n\
    and '\u001B[1m[cmd] --help\u001B[0m' for help on a specific command.\n\
 \n\
 Open a browser to OPENSHIFT_FUSE_CONSOLE_URL to access the management console\n\
 \n\
-Create a new Fabric via '\u001B[1mfabric:create\u001B[0m'\n\
- or join an existing Fabric via '\u001B[1mfabric:join [someUrls]\u001B[0m'\n\
-\n\
-Hit '<ctrl-d>' or 'osgi:shutdown' to shutdown JBoss Fuse.\n
+Hit '<ctrl-d>' or 'osgi:shutdown' to shutdown JBoss A-MQ.\n\
 
-prompt = \u001B[1mJBossFuse\u001B[0m:\u001B[36m${USER}\u001B[0m\u001B[1m@\u001B[0m\u001B[34m${APPLICATION}\u001B[0m>\u0020
+prompt = \u001B[1mJBossA-MQ\u001B[0m:\u001B[36m${USER}\u001B[0m\u001B[1m@\u001B[0m\u001B[34m${APPLICATION}\u001B[0m> \
+
 
