--- a/metadata/manifest.yml
+++ b/metadata/manifest.yml
@@ -7,8 +7,8 @@ Source-Url: https://github.com/jboss-fuse/fuse-openshift-cartridge/archive/mvnre
 License: "ASL 2.0"
 License-Url: http://www.apache.org/licenses/LICENSE-2.0.txt
 Cartridge-Version: 0.0.1
-#Cartridge-Vendor: redhat
-#Vendor: redhat
+Cartridge-Vendor: test
+Vendor: test
 Categories:
   - build
   - service
