--- a/bin/control
+++ b/bin/control
@@ -1,6 +1,6 @@
 #!/bin/bash
 source $OPENSHIFT_CARTRIDGE_SDK_BASH
-
+exit 0
 
 function start {
     /usr/sbin/httpd -f $OPENSHIFT_MVNREPO_DIR/etc/httpd.conf -k start
